# N-Code

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: checks.yml
include/: Parser.h
src/: Parser.cpp  Parser.h  main.cpp
tests/: test_Parser.cpp
